src/eclipse-workspace/Sample/src/csd/App.java
/*----------------------------------------------------------------------------------------------------------------------	 
	İşlem Öncesi Otomatik Tür Dönüşümleri:
-----------------------------------------------------------------------------------------------------------------------*/
package csd;

class App {
	public static void main(String [] args)
	{		
		boolean a = true;
		int b;
		
		b = a; //error
	}
}


